--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     ]
   },
   "devDependencies": {
+    "file-loader": "^6.1.1",
+    "url-loader": "^4.1.1",
     "web-vitals": "^2.1.0"
   }
 }
