added react-typed feature

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://markphilipb.github.io/portfolio",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
@@ -17,13 +18,17 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.4",
+    "react-typed": "^1.2.0",
+    "react-typist": "^2.0.5",
     "styled-components": "^5.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +50,7 @@
   },
   "devDependencies": {
     "file-loader": "^6.1.1",
+    "gh-pages": "^3.2.3",
     "url-loader": "^4.1.1",
     "web-vitals": "^2.1.0"
   }
