changed address name and added CNAME

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://markphilipb.github.io/portfolio",
+  "homepage": "http://www.markbalazon.com",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
