quick changes to master

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://www.markbalazon.com",
+  "homepage": "https://markbalazon.com",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
